--- a/styles/prose.css
+++ b/styles/prose.css
@@ -1,11 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-  @apply bg-background;
-}
-
 .prose h1 {
   @apply text-5xl text-white font-semibold py-4;
 }
@@ -31,9 +23,9 @@ body {
 }
 
 .prose p {
-  @apply text-gray-300 py-1;
-  font-size: 1.05rem;
-  line-height: 2rem;
+  @apply text-gray-200 py-1;
+  font-size: 1rem;
+  line-height: 1.8rem;
 }
 
 .prose a {
@@ -57,11 +49,11 @@ body {
 }
 
 .prose code {
-  @apply bg-accent pt-1 pb-0.5 px-2 rounded-md border border-outline-accent text-sm;
+  @apply text-white text-sm bg-accent px-2 py-0.5 rounded-md shadow-md border border-outline-accent whitespace-nowrap;
 }
 
 .prose pre code {
-  @apply bg-transparent p-0 rounded-none border-none text-white opacity-90;
+  @apply text-sm bg-transparent rounded-none shadow-none border-none p-0 whitespace-pre;
 }
 
 .prose blockquote {
