--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,24 @@
 @tailwind utilities;
 
 html {
-  @apply bg-background;
+  @apply bg-primary;
+}
+
+.animate-blink {
+  animation: blink 1s steps(5, start) infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  49% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
